# opentelemetry-pycon

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
infrastructure/: collector.yaml
k8s/: collector-example.yaml
opentelemetry_pycon/: app.py  span_cli.py  tracing.py
